model update, invoices register sample

--- a/repo/src/main/amp/config/alfresco/module/registers/messages/alvex-registers-model.properties
+++ b/repo/src/main/amp/config/alfresco/module/registers/messages/alvex-registers-model.properties
@@ -1,2 +1,20 @@
 alvexreg_registers_model.type.alvexreg_register.title=Register container type
 alvexreg_registers_model.type.alvexreg_registerItem.title=Register parent type
+alvexreg_registers_model.property.alvexreg_id.title=ID
+alvexreg_registers_model.property.alvexreg_registerDate.title=Register Date
+
+alvexreg_registers_model.type.alvexreg_invoice.title=Invoices
+alvexreg_registers_model.property.alvexreg_invoiceDate.title=Invoice Date
+alvexreg_registers_model.property.alvexreg_paymentDate.title=Payment Date
+alvexreg_registers_model.property.alvexreg_amount.title=Amount
+alvexreg_registers_model.property.alvexreg_currency.title=Currency
+alvexreg_registers_model.property.alvexreg_ispaid.title=Paid
+alvexreg_registers_model.property.alvexreg_contractor.title=Contractor
+alvexreg_registers_model.property.alvexreg_invoiceSummary.title=Summary
+alvexreg_registers_model.property.alvexreg_linkedDocuments.title=With Related Documents
+alvexreg_registers_model.property.alvexreg_documentManager.title=Document Manager
+alvexreg_registers_model.property.alvexreg_expiryDate.title=Expiry Date
+
+registers.menu.new-item=New item
+registers.menu.columns=Columns
+registers.menu.export-xls=Export to XLS
