--- a/share/pom.xml
+++ b/share/pom.xml
@@ -46,5 +46,11 @@
       <version>1.19-SNAPSHOT</version>
       <classifier>installable</classifier>
     </dependency>
+    <dependency>
+      <groupId>com.alvexcore.share</groupId>
+      <artifactId>aikau-components</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <classifier>installable</classifier>
+    </dependency>
   </dependencies>
 </project>
