--- a/repo/src/main/amp/config/alfresco/module/registers/messages/alvex-registers-model.properties
+++ b/repo/src/main/amp/config/alfresco/module/registers/messages/alvex-registers-model.properties
@@ -5,16 +5,12 @@ alvexreg_registers_model.property.alvexreg_registerDate.title=Register Date
 
 alvexreg_registers_model.type.alvexreg_invoice.title=Invoices
 alvexreg_registers_model.property.alvexreg_invoiceDate.title=Invoice Date
-alvexreg_registers_model.property.alvexreg_paymentDate.title=Payment Date
-alvexreg_registers_model.property.alvexreg_amount.title=Amount
-alvexreg_registers_model.property.alvexreg_currency.title=Currency
-alvexreg_registers_model.property.alvexreg_ispaid.title=Paid
-alvexreg_registers_model.property.alvexreg_contractor.title=Contractor
+alvexreg_registers_model.property.alvexreg_invoicePaymentDate.title=Payment Date
+alvexreg_registers_model.property.alvexreg_invoiceAmount.title=Amount
+alvexreg_registers_model.property.alvexreg_invoiceCurrency.title=Currency
+alvexreg_registers_model.property.alvexreg_invoiceIsPaid.title=Paid
+alvexreg_registers_model.property.alvexreg_invoiceContractor.title=Contractor
 alvexreg_registers_model.property.alvexreg_invoiceSummary.title=Summary
-alvexreg_registers_model.property.alvexreg_linkedDocuments.title=With Related Documents
-alvexreg_registers_model.property.alvexreg_documentManager.title=Document Manager
-alvexreg_registers_model.property.alvexreg_expiryDate.title=Expiry Date
-
-registers.menu.new-item=New item
-registers.menu.columns=Columns
-registers.menu.export-xls=Export to XLS
+alvexreg_registers_model.association.alvexreg_invoiceLinkedDocuments.title=With Related Documents
+alvexreg_registers_model.association.alvexreg_invoiceDocumentManager.title=Document Manager
+alvexreg_registers_model.property.alvexreg_invoiceExpiryDate.title=Expiry Date
