--- a/repo/src/main/amp/config/alfresco/module/registers/messages/alvex-registers-model.properties
+++ b/repo/src/main/amp/config/alfresco/module/registers/messages/alvex-registers-model.properties
@@ -2,6 +2,7 @@ alvexreg_registers_model.type.alvexreg_register.title=Register container type
 alvexreg_registers_model.type.alvexreg_registerItem.title=Register parent type
 alvexreg_registers_model.property.alvexreg_id.title=ID
 alvexreg_registers_model.property.alvexreg_registerDate.title=Register Date
+alvexreg_registers_model.association.alvexreg_files.title=Files
 
 alvexreg_registers_model.type.alvexreg_invoice.title=Invoices
 alvexreg_registers_model.property.alvexreg_invoiceDate.title=Invoice Date
