invoice model changed, contract model draft

--- a/repo/src/main/amp/config/alfresco/module/registers/messages/alvex-registers-model.properties
+++ b/repo/src/main/amp/config/alfresco/module/registers/messages/alvex-registers-model.properties
@@ -1,7 +1,6 @@
 alvexreg_registers_model.type.alvexreg_register.title=Register container type
 alvexreg_registers_model.type.alvexreg_registerItem.title=Register parent type
 alvexreg_registers_model.property.alvexreg_id.title=ID
-alvexreg_registers_model.property.alvexreg_registerDate.title=Register Date
 alvexreg_registers_model.association.alvexreg_files.title=Files
 
 alvexreg_registers_model.type.alvexreg_invoice.title=Invoices
@@ -15,3 +14,16 @@ alvexreg_registers_model.property.alvexreg_invoiceSummary.title=Summary
 alvexreg_registers_model.association.alvexreg_invoiceLinkedDocuments.title=With Related Documents
 alvexreg_registers_model.association.alvexreg_invoiceDocumentManager.title=Document Manager
 alvexreg_registers_model.property.alvexreg_invoiceExpiryDate.title=Expiry Date
+
+alvexreg_registers_model.type.alvexreg_contract.title=Contracts
+alvexreg_registers_model.property.alvexreg_contractDate.title=Contract Date
+alvexreg_registers_model.property.alvexreg_contractSummary.title=Summary
+alvexreg_registers_model.property.alvexreg_contractContractor.title=Contractor
+alvexreg_registers_model.property.alvexreg_contractStatus.title=Status
+alvexreg_registers_model.property.alvexreg_contractLocation.title=Document Location
+alvexreg_registers_model.association.alvexreg_contractLinkedDocuments.title=With Related Documents
+alvexreg_registers_model.association.alvexreg_contractDocumentManager.title=Document Manager
+alvexreg_registers_model.association.alvexreg_contractSignatory.title=Signatory
+listconstraint.alvexreg_contractStatusConstraint.draft=Draft
+listconstraint.alvexreg_contractStatusConstraint.signed=Signed
+listconstraint.alvexreg_contractStatusConstraint.archived=Archived
