--- a/share/src/main/amp/config/alfresco/web-extension/messages/alvex-registers-form-messages.properties
+++ b/share/src/main/amp/config/alfresco/web-extension/messages/alvex-registers-form-messages.properties
@@ -1,3 +1,3 @@
-set.label.id=Common Properties
-set.label.invoice=Invioce Data
+set.label.primary=Register Item Info
 set.label.links=Links
+set.label.files=Files
