--- a/share/src/main/amp/config/alfresco/web-extension/site-webscripts/com/alvexcore/register-item.get.properties
+++ b/share/src/main/amp/config/alfresco/web-extension/site-webscripts/com/alvexcore/register-item.get.properties
@@ -1,1 +1,13 @@
 page.register-item.title=Register Item Details
+
+
+# share-header.lib.properties, doesn't render this automatically
+user.dashboard={0} Dashboard
+header.menu.home.label=Home
+header.menu.sites.label=Sites
+header.menu.people.label=People
+header.menu.repository.label=Repository
+header.menu.admin.label=Admin Tools
+header.menu.admin.sites.label=Sites Manager
+header.menu.mytasks.label=My Tasks
+header.menu.myworkflows.label=Workflows I've Started
